@@ -1,1 +1,1 @@
-0.5.0rc3
+0.5.0rc4
